@startuml

title __FLIPEXIT's Class Diagram__\n

  namespace com.gykj.smartdialogmoudle {
    namespace anims {
      namespace FlipExit {
        class com.gykj.smartdialogmoudle.anims.FlipExit.FlipHorizontalExit {
            + setAnimation()
        }
      }
    }
  }
  

  namespace com.gykj.smartdialogmoudle {
    namespace anims {
      namespace FlipExit {
        class com.gykj.smartdialogmoudle.anims.FlipExit.FlipVerticalExit {
            + setAnimation()
        }
      }
    }
  }
  

  com.gykj.smartdialogmoudle.anims.FlipExit.FlipHorizontalExit -up-|> com.gykj.smartdialogmoudle.base.BaseAnimatorSet
  com.gykj.smartdialogmoudle.anims.FlipExit.FlipVerticalExit -up-|> com.gykj.smartdialogmoudle.base.BaseAnimatorSet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
